# duneuro_meg_forward_test

./: .gitignore  CMakeLists.txt  config.h.cmake  dune.module  duneuro-meg-test.pc.in  duneuro_meg_forward_test.pc.in
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/duneuro-meg-test/: CMakeLists.txt  duneuro-meg-test.hh
dune/duneuro_meg_forward_test/: CMakeLists.txt  duneuro_meg_forward_test.hh
src/: CMakeLists.txt  duneuro-meg-test.cc  duneuro_meg_forward_test.cc
src/input/: configs.ini  dipole.txt  dipoles.txt
src/output/: secondary_field_visualization.pvsm
